fix z-index issue

--- a/layout/master_layout.css
+++ b/layout/master_layout.css
@@ -15,10 +15,6 @@ body {
     font-family: 'Rythmus';
 }
 
-main {
-    z-index: -3;
-}
-
 
 /***************logo*************************/
 
@@ -47,7 +43,7 @@ main {
     height: 27px;
     width: 35px;
     cursor: pointer;
-    z-index: 1;
+    z-index: 11;
     -webkit-transition: opacity .25s ease;
     transition: opacity .25s ease;
 }
@@ -83,6 +79,8 @@ main {
     -webkit-transform: translateY(-11px) translateX(0) rotate(-45deg);
     transform: translateY(-11px) translateX(0) rotate(-45deg);
     background: #FFF;
+    z-index: 1000;
+
 }
 
 
@@ -93,6 +91,7 @@ main {
     position: absolute;
     top: 2%;
     left: 0;
+    z-index: 1000;
     height: 5px;
     width: 100%;
     -webkit-transition: all .35s ease;
@@ -117,6 +116,7 @@ main {
 .overlay {
     position: fixed;
     background: gray;
+    z-index: 10;
     top: 0;
     left: 0;
     width: 100%;
@@ -305,24 +305,24 @@ main {
 }
 
 .view h4 {
-  text-transform: uppercase;
-  color: #fff;
-  text-align: center;
-  position: relative;
-  font-size: 17px;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.8);
-  margin-top: 20px;
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+    margin-top: 20px;
 }
 
 .view p {
-  font-family: Georgia, serif;
-  font-style: italic;
-  font-size: 12px;
-  position: relative;
-  color: #fff;
-  padding: 10px 20px 20px;
-  text-align: center;
+    font-family: Georgia, serif;
+    font-style: italic;
+    font-size: 12px;
+    position: relative;
+    color: #fff;
+    padding: 10px 20px 20px;
+    text-align: center;
 }
 
 .info {
